--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
 Flask==3.1.2
+flask-cors==6.0.1
 frozenlist==1.8.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 idna==3.11
@@ -18,6 +20,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 multidict==6.7.0
 numpy==2.3.4
+packaging==25.0
 pandas==2.3.3
 propcache==0.4.1
 python-dateutil==2.9.0.post0
